--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
+
+    <button id="btnRock">Rock</button>
+    <button id="btnPaper">Paper</button>
+    <button id="btnScissors">Scissors</button>
+
 </body>
 </html>
