--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="javascript.js" defer></script>
 </head>
 <body>
-    <script src="javascript.js" defer></script>
 
     <button id="btnRock">Rock</button>
     <button id="btnPaper">Paper</button>
     <button id="btnScissors">Scissors</button>
+
+    <div id="container"></div>
 
 </body>
 </html>
